[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argonflow"
version = "0.1.0"
description = "High-performance HFT data scout and binary distributor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "uvloop>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "msgpack>=1.0.7",
    "pycryptodome>=3.20.0",
    "aiofiles>=23.2.1",
    "aiocsv>=1.3.1",
]

[project.scripts]
argon-scout = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]  # ONLY look for the app folder
exclude = ["data*", "logs*", "tests*"] # Explicitly ignore the rest
