[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argonflow"
version = "0.1.0"
description = "Ultra-low latency HFT data scout and binary distributor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "uvloop>=0.19.0",      # Critical for event loop speed
    "websockets>=12.0",    # Robust WS implementation
    "msgspec>=1.0.7",      # Fastest serializer
    "pycryptodome>=3.20.0",# If you need payload encryption
    # Removed: fastapi, uvicorn, aiofiles, aiocsv (unless needed for logging/metrics)
]

[project.scripts]
argon-scout = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "logs*", "tests*"]